--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -21,20 +21,21 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="at.ac.fhcampuswien.xsolutions.AppController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.xsolutions.AppController">
    <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <HBox prefHeight="984.0" prefWidth="1680.0" VBox.vgrow="ALWAYS">
-         <AnchorPane prefHeight="990.0" prefWidth="234.0" style="-fx-background-color: #D9D9D9;" styleClass="text" stylesheets="@styles.css">
-            <Label layoutX="21.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Tische" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="14.0">
+         <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="990.0" prefWidth="200.0" style="-fx-background-color: #D9D9D9;" styleClass="text" stylesheets="@styles.css">
+            <Pane layoutX="44.0" layoutY="15.0" prefHeight="39.0" prefWidth="34.0" styleClass="table" stylesheets="@styles.css" />
+            <ListView fx:id="tablesListView" fixedCellSize="40.0" layoutY="60.0" prefHeight="930.0" prefWidth="172.0" style="-fx-background-color: transparent; -fx-font-size: 15px;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
+            <Label layoutX="78.0" layoutY="17.0" prefHeight="36.0" prefWidth="61.0" styleClass="text" stylesheets="@styles.css" text="Tische">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <ListView fx:id="tablesListView" fixedCellSize="40.0" layoutY="60.0" prefHeight="900.0" prefWidth="404.0" style="-fx-background-color: transparent; -fx-font-size: 15px;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
          </AnchorPane>
          <AnchorPane prefHeight="990.0" prefWidth="1129.0" HBox.hgrow="ALWAYS">
             <AnchorPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <Pane fx:id="settingsTab" layoutX="30.0" layoutY="24.0" prefHeight="891.0" prefWidth="734.0" stylesheets="@styles.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="14.0">
+               <Pane fx:id="settingsTab" layoutX="30.0" layoutY="24.0" prefHeight="891.0" prefWidth="734.0" stylesheets="@styles.css" visible="false" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="14.0">
                   <Label prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Einstellungen">
                      <font>
                         <Font size="18.0" />
@@ -320,17 +321,22 @@
                      </VBox>
                   </Pane>
                </Pane>
-               <VBox fx:id="productsPane" prefHeight="200.0" prefWidth="100.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <VBox fx:id="productsPane" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                   <AnchorPane prefHeight="44.0" prefWidth="909.0">
                      <GridPane alignment="CENTER" minWidth="62.0" prefHeight="62.0" prefWidth="868.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                         <columnConstraints>
                            <ColumnConstraints fillWidth="false" hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
-                           <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
-                           <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
+                           <ColumnConstraints hgrow="ALWAYS" maxWidth="1002.0" minWidth="10.0" prefWidth="939.0" />
+                           <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" maxWidth="362.0" minWidth="10.0" prefWidth="168.0" />
                         </columnConstraints>
                         <rowConstraints>
                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         </rowConstraints>
+                        <Button fx:id="resetCategory" mnemonicParsing="false" onAction="#resetCategory" prefHeight="9.0" prefWidth="28.0" styleClass="resetCategory" stylesheets="@styles.css" GridPane.columnIndex="2">
+                           <GridPane.margin>
+                              <Insets right="140.0" />
+                           </GridPane.margin>
+                        </Button>
                         <Label prefHeight="36.0" prefWidth="114.0" styleClass="text" stylesheets="@styles.css" text="Produkte">
                            <font>
                               <Font size="18.0" />
@@ -349,10 +355,11 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
+                        <ChoiceBox fx:id="choiceBox" prefHeight="32.0" prefWidth="126.0" stylesheets="@styles.css" GridPane.columnIndex="2" />
                      </GridPane>
                   </AnchorPane>
                   <ScrollPane fx:id="ScrollPaneProducts" prefHeight="898.0" prefWidth="868.0">
-                     <GridPane fx:id="GridPaneProducts" hgap="20.0" prefHeight="891.0" prefWidth="1018.0" stylesheets="@styles.css" vgap="20.0">
+                     <GridPane fx:id="GridPaneProducts" hgap="20.0" prefHeight="891.0" prefWidth="1221.0" stylesheets="@styles.css" vgap="20.0">
                         <columnConstraints>
                            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
                            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
