--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -345,7 +345,7 @@
                               <Insets left="20.0" />
                            </GridPane.margin>
                         </Label>
-                        <TextField fx:id="searchField" maxWidth="400.0" prefHeight="37.0" prefWidth="535.0" promptText="Produkt suchen" styleClass="search-field" stylesheets="@styles.css" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <TextField fx:id="searchField" maxWidth="549.0" prefHeight="35.0" prefWidth="550.0" promptText="Produkt suchen" styleClass="search-field" stylesheets="@styles.css" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <GridPane.margin>
                               <Insets />
                            </GridPane.margin>
@@ -355,7 +355,10 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ChoiceBox fx:id="choiceBox" prefHeight="32.0" prefWidth="126.0" stylesheets="@styles.css" GridPane.columnIndex="2" />
+                        <ChoiceBox fx:id="choiceBox" prefHeight="30.0" prefWidth="115.0" stylesheets="@styles.css" GridPane.columnIndex="2">
+                           <GridPane.margin>
+                              <Insets right="10.0" />
+                           </GridPane.margin></ChoiceBox>
                      </GridPane>
                   </AnchorPane>
                   <ScrollPane fx:id="ScrollPaneProducts" prefHeight="898.0" prefWidth="868.0">
