--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -80,23 +80,55 @@
                      <Label fx:id="productsSettingsPrice" layoutY="442.0" prefHeight="27.0" prefWidth="828.0" text="Preis: Keiner" />
                      <Label fx:id="productsSettingsCategory" layoutY="469.0" prefHeight="27.0" prefWidth="828.0" text="Kategorie: Keine" />
                      <Pane fx:id="productImagePreview" layoutX="602.0" layoutY="317.0" prefHeight="142.0" prefWidth="212.0" />
-                     <VBox layoutX="1.0" layoutY="509.0" prefHeight="153.0" prefWidth="217.0" spacing="12.0">
+                     <VBox layoutX="1.0" layoutY="509.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="190.0" prefWidth="240.0" spacing="12.0">
                         <Button mnemonicParsing="false" onAction="#productsSettingsChangeName" prefHeight="25.0" prefWidth="200.0" styleClass="acceptBtn" text="Produktname ändern" />
                         <Button mnemonicParsing="false" onAction="#productsSettingsChangeDescription" prefHeight="25.0" prefWidth="200.0" styleClass="acceptBtn" text="Beschreibung ändern" />
                         <Button mnemonicParsing="false" onAction="#productsSettingsChangeURL" prefHeight="25.0" prefWidth="200.0" styleClass="acceptBtn" text="Bild-URL ändern" />
                         <Button mnemonicParsing="false" onAction="#productsSettingsChangePrice" prefHeight="25.0" prefWidth="200.0" styleClass="acceptBtn" text="Preis ändern" />
-                        <Button mnemonicParsing="false" onAction="#productsSettingsChangeCategory" prefHeight="25.0" prefWidth="200.0" styleClass="acceptBtn" text="Kategorie ändern" />
+                        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="240.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="103.0" minWidth="10.0" prefWidth="101.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="105.0" minWidth="10.0" prefWidth="99.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="62.0" minWidth="10.0" prefWidth="40.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <VBox.margin>
+                              <Insets right="25.0" />
+                           </VBox.margin>
+                           <children>
+                              <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#productsSettingsAddCategory" prefHeight="30.0" prefWidth="97.0" styleClass="acceptBtn" text="hinzufügen">
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin></Button>
+                              <Button layoutX="10.0" layoutY="8.0" minHeight="-Infinity" mnemonicParsing="false" onAction="#productsSettingsRemoveCategory" prefHeight="30.0" prefWidth="100.0" styleClass="acceptBtn" text="entfernen" GridPane.columnIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="5.0" />
+                                 </GridPane.margin>
+                              </Button>
+                           </children>
+                        </GridPane>
                      </VBox>
                      <Button layoutY="732.0" mnemonicParsing="false" onMouseReleased="#productsSettingsDelete" prefHeight="25.0" prefWidth="200.0" styleClass="deleteBtn" text="Produkt löschen" />
                      <Button layoutX="213.0" layoutY="732.0" mnemonicParsing="false" onMouseReleased="#productsSettingsCreateNew" prefHeight="30.0" prefWidth="223.0" styleClass="acceptBtn" text="Neues Produkt erstellen" />
                      <VBox layoutX="214.0" layoutY="509.0" prefHeight="159.0" prefWidth="222.0" spacing="10.0">
                         <TextField fx:id="newProductName" prefHeight="25.0" prefWidth="600.0" promptText="Neuer Produktname" />
                         <TextField fx:id="newProductDescription" prefHeight="25.0" prefWidth="600.0" promptText="Neue Beschreibung" />
-                        <TextField fx:id="newURL" prefHeight="25.0" prefWidth="600.0" promptText="Neue Bild-URL" />
+                        <TextField fx:id="newURL" prefHeight="32.0" prefWidth="156.0" promptText="Neue Bild-URL" />
                         <TextField fx:id="newProductPrice" prefHeight="25.0" prefWidth="600.0" promptText="Neuer Preis" />
-                        <ChoiceBox fx:id="newProductCategory" prefHeight="32.0" prefWidth="224.0" />
+                        <ChoiceBox fx:id="newProductCategory" prefHeight="32.0" prefWidth="232.0" />
                      </VBox>
                   </Pane>
+                  <VBox layoutX="450.0" layoutY="800.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="50.0" spacing="10.0">
+                     <children>
+                        <Button fx:id="resetCategoryTrash" mnemonicParsing="false" onAction="#clearCategoryInSettings" prefHeight="33.0" prefWidth="22.0" styleClass="resetButton" stylesheets="@styles.css">
+                           <VBox.margin>
+                              <Insets left="13.0" top="18.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
                   <VBox fx:id="tablesSettingPane" fillWidth="false" layoutX="3.0" layoutY="140.0" prefHeight="57.0" prefWidth="273.0" visible="false">
                      <Label fx:id="settingsLabelParameter" prefHeight="17.0" prefWidth="410.0" style="-fx-font-size: 18;" text="Anzahl der Tische:">
                         <VBox.margin>
